added item pages

--- a/public/items/conflict/bosnian-uniform.html
+++ b/public/items/conflict/bosnian-uniform.html
@@ -3,6 +3,8 @@
    		<title>Bosnian Uniform</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,36 +46,21 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
-		</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
+			</div>
 
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="un-patch.html">Last Item</a> . . . <a href="bosnia-road-sign.html"> Next Item</a></p>
-		</div>
+			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="un-patch.html">Last Item</a> . . . <a href="bosnia-road-sign.html"> Next Item</a></p>
+			</div>
 
-		<div class="item-pages">
-			<h2>Pink Wool Uniform</h2>
+			<div class="item-pages">
+				<h2>Pink Wool Uniform</h2>
 
-			<div class="item-block">
+				<img class="item-image" src="bosnian-uniform.jpeg" alt="Caption">
 
-				<!-- Trigger the Modal -->
-				<img id="bosnianUniform" class="item-image" src="bosnian-uniform.jpeg" width="300" height="200" alt="Caption">
-
-				<!-- The Modal -->
-				<div id="bosnianUniformModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('bosnianUniformModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="bosnianUniformImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="bosnianUniformCaption">Caption Text</div>
-				</div>
-
-				<div>
+				<div class="item-text-block">
 					<p class="item-text">When war broke out in Bosnia, the Bosniac government lacked proper uniforms for their soldiers. 
 						As the winter months neared, the need for cold weather uniforms became a necessity. The government decided to 
 						take advantage of the tailor shops in the old-town section of Sarajevo.
@@ -84,10 +71,11 @@
 						tended to be a but embarrassing.
 						<br><br>
 						I was told that soldiers reluctantly agreed to wear the pink uniforms when it was cold, but got rid of them as soon 
-						as the weather began to warm up.</p>
+						as the weather began to warm up.
+					</p>
 				</div>
-			</div>
-		</div>		
+			</div>		
+		</div>
 
 		<footer class="clear">
 
