--- a/public/items/conflict/evening-standard.html
+++ b/public/items/conflict/evening-standard.html
@@ -3,6 +3,8 @@
    		<title>Evening Standard Posters</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,36 +46,22 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
-		</div>
-
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="#">Last Item</a> . . . <a href="#"> Next Item</a></p>
-		</div>
-
-		<div class="item-pages">
-			<h2>Evening Standard Posters</h2>
-
-			<div class="item-block">
-
-				<!-- Trigger the Modal -->
-				<img id="eveningStandard" class="item-image" src="evening-standard.jpeg" width="300" height="200" alt="Caption">
-
-				<!-- The Modal -->
-				<div id="eveningStandardModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('eveningStandardModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="eveningStandardImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="eveningStandardCaption">Caption Text</div>
-				</div>
+		<div class="container">
 
 			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
+			</div>
+
+			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="cigarettes-bosnia.html">Last Item</a> . . . <a href="french-apc-part.html"> Next Item</a></p>
+			</div>
+
+			<div class="item-pages">
+				<h2>Evening Standard Posters</h2>
+
+				<img class="item-image" src="evening-standard.jpeg" alt="Caption">
+
+				<div class="item-text-block">
 					<p class="item-text">
 						These posters were displayed on newspaper stands in downtown London after NATO forces started Operation 
 						Deliberate Freedom on August 30, 1995. The operation involved 400 aircraft, 5,000 personnel from fifteen nations.
