--- a/public/items/conflict/maybe-airlines-shirt.html
+++ b/public/items/conflict/maybe-airlines-shirt.html
@@ -3,6 +3,8 @@
    		<title>Maybe Airlines Shirt</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,38 +46,26 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
-		</div>
-
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="sarajevo-artillery-shell.html">Last Item</a> . . . <a href="olympic-jersey.html"> Next Item</a></p>
-		</div>
-
-		<div class="item-pages">
-			<h2>Maybe Airlines Shirt</h2>
-
-			<!-- Trigger the Modal -->
-			<img id="maybeAirlinesShirt" class="item-image" src="maybe-airlines-shirt.jpeg" width="300" height="200" alt="Caption">
-
-			<!-- The Modal -->
-			<div id="maybeAirlinesShirtModal" class="modal">
-
-  				<!-- The Close Button -->
-  				<span class="close" onclick="document.getElementById('maybeAirlinesShirtModal').style.display='none'">&times;</span>
-
-  				<!-- Modal Content (The Image) -->
-  				<img class="modal-content" id="maybeAirlinesShirtImage">
-
-  				<!-- Modal Caption (Image Text) -->
-  				<div id="maybeAirlinesShirtCaption">Caption Text</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
 			</div>
 
 			<div>
-				<p>Add text.</p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="sarajevo-artillery-shell.html">Last Item</a> . . . <a href="olympic-jerseys.html"> Next Item</a></p>
 			</div>
-		</div>		
 
+			<div class="item-pages">
+				<h2>Maybe Airlines Shirt</h2>
+
+				<img class="item-image" src="maybe-airlines-shirt.jpeg" alt="Caption">
+
+				<div class="item-text-block">
+					<p class="item-text">Add text.</p>
+				</div>
+			</div>		
+		</div>
+		
 		<footer class="clear">
 
 			<div class="footerbox">
