--- a/public/items/conflict/olympic-jerseys.html
+++ b/public/items/conflict/olympic-jerseys.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 	<head>
-   		<title>Olympic Number</title>
+   		<title>Sarajevo Olympic Jerseys</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,37 +46,27 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
-		</div>
-
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="maybe-airlines-shirt.html">Last Item</a> . . . <a href="un-patch.html"> Next Item</a></p>
-		</div>
-
-		<div class="item-pages">
-			<h2>Olympic Number</h2>
-
-			<!-- Trigger the Modal -->
-			<img id="olympicJersey" class="item-image" src="olympic-jersey.jpeg" width="300" height="200" alt="Caption">
-
-			<!-- The Modal -->
-			<div id="olympicJerseyModal" class="modal">
-
-  				<!-- The Close Button -->
-  				<span class="close" onclick="document.getElementById('olympicJerseyModal').style.display='none'">&times;</span>
-
-  				<!-- Modal Content (The Image) -->
-  				<img class="modal-content" id="olympicJerseyImage">
-
-  				<!-- Modal Caption (Image Text) -->
-  				<div id="olympicJerseyCaption">Caption Text</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
 			</div>
 
 			<div>
-				<p>Add text.</p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="maybe-airlines-shirt.html">Last Item</a> . . . <a href="un-patch.html"> Next Item</a></p>
 			</div>
-		</div>		
+
+			<div class="item-pages">
+				<h2>Sarajevo Olympic Jerseys</h2>
+
+				<img class="item-image" src="olympic-jerseys.jpeg" alt="Caption">
+
+				<div class="item-text-block">
+					<p class="item-text">
+						Add text.
+					</p>
+				</div>
+			</div>		
+		</div>
 
 		<footer class="clear">
 
