--- a/public/items/conflict/sarajevo-artillery-shell.html
+++ b/public/items/conflict/sarajevo-artillery-shell.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 	<head>
-   		<title>Sarajevo Artillery Shell</title>
+   		<title>Exploded Artillery Shell</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,37 +46,25 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
-		</div>
-
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="sarajevo-un-flag.html">Last Item</a> . . . <a href="maybe-airlines-shirt.html"> Next Item</a></p>
-		</div>
-
-		<div class="item-pages">
-			<h2>Sarajevo Artillery Shell</h2>
-
-			<!-- Trigger the Modal -->
-			<img id="sarajevoArtilleryShell" class="item-image" src="sarajevo-artillery-shell.jpeg" width="300" height="200" alt="Caption">
-
-			<!-- The Modal -->
-			<div id="sarajevoArtilleryShellModal" class="modal">
-
-  				<!-- The Close Button -->
-  				<span class="close" onclick="document.getElementById('sarajevoArtilleryShellModal').style.display='none'">&times;</span>
-
-  				<!-- Modal Content (The Image) -->
-  				<img class="modal-content" id="sarajevoArtilleryShellImage">
-
-  				<!-- Modal Caption (Image Text) -->
-  				<div id="sarajevoArtilleryShellCaption">Caption Text</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
 			</div>
 
 			<div>
-				<p>Add text.</p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="sarajevo-un-flag.html">Last Item</a> . . . <a href="maybe-airlines-shirt.html"> Next Item</a></p>
 			</div>
-		</div>		
+
+			<div class="item-pages">
+				<h2>Exploded Artillery Shell</h2>
+
+				<img class="item-image" src="sarajevo-artillery-shell.jpeg" alt="Caption">
+
+				<div class="item-text-block">
+					<p class="item-text">Add text.</p>
+				</div>
+			</div>		
+		</div>
 
 		<footer class="clear">
 
