--- a/public/items/conflict/sarajevo-un-flag.html
+++ b/public/items/conflict/sarajevo-un-flag.html
@@ -3,6 +3,8 @@
    		<title>UN Sarajevo Flag</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,36 +46,22 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
-		</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
+			</div>
 
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="sniper-sign.html">Last Item</a> . . . <a href="un-flag-russian-apc.html"> Next Item</a></p>
-		</div>
+			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="sniper-sign.html">Last Item</a> . . . <a href="un-flag-russian-apc.html"> Next Item</a></p>
+			</div>
 
-		<div class="item-pages">
-			<h2>UN Flag with Unit Patches</h2>
+			<div class="item-pages">
+				<h2>UN Flag with Unit Patches</h2>
 
-			<div class="item-block">
-				<!-- Trigger the Modal -->
-				<img id="sarajevoUnFlag" class="item-image" src="sarajevo-un-flag.jpeg" width="300" height="200" alt="Caption">
+				<img class="item-image" src="sarajevo-un-flag.jpeg" alt="Caption">
 
-				<!-- The Modal -->
-				<div id="sarajevoUnFlagModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('sarajevoUnFlagModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="sarajevoUnFlagImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="sarajevoUnFlagCaption">Caption Text</div>
-				</div>
-
-				<div class="item-text">
-					<p>This flag was put together as a memento for United Nations soldiers from the United Nations Protective Forces (UNPROFOR). 
+				<div class="item-text-block">
+					<p class="text-block">This flag was put together as a memento for United Nations soldiers from the United Nations Protective Forces (UNPROFOR). 
 						The thirty-eight patches on the flag represent many of the countries that participated in the peace-keeping mission.
 						<br><br>
 						Starting in February 1992 and lasting until March 1995 (when it was replaced by IFOR), UNPROFOR enlisted the aid of 
@@ -82,11 +70,12 @@
 						Srebrenica, Bihac, Sarajevo, Gordazde, Zepa and Tuzla. According to the UN, UNPROFOR troops suffered 167 fatalities during 
 						the operation.
 						<br><br>
-						This flag hung at the Post Exchange at the Sarajevo Airport in 1995.</p>
-				</div>
-			</div>	
-		</div>		
-
+						This flag hung at the Post Exchange at the Sarajevo Airport in 1995.
+					</p>
+				</div>	
+			</div>		
+		</div>
+		
 		<footer class="clear">
 
 			<div class="footerbox">
