--- a/public/items/conflict/shattered-glass.html
+++ b/public/items/conflict/shattered-glass.html
@@ -58,35 +58,17 @@
 			<div class="item-pages">
 				<h2>Bullet-Resistant Glass</h2>
 
-				<img id="shatteredGlass" class="item-image" src="shattered-glass.jpeg" alt="Caption">
+				<img class="item-image" src="shattered-glass.jpeg" alt="Caption">
 
-				<!-- <div class="item-block"> -->
-					<!-- Trigger the Modal -->
-					<!-- <img id="shatteredGlass" class="item-image" src="shattered-glass.jpeg" width="300" height="200" alt="Caption"> -->
-
-					<!-- The Modal -->
-					<!-- <div id="shatteredGlassModal" class="modal"> -->
-
-						<!-- The Close Button -->
-						<!-- <span class="close" onclick="document.getElementById('shatteredGlassModal').style.display='none'">&times;</span> -->
-
-						<!-- Modal Content (The Image) -->
-						<!-- <img class="modal-content" id="shatteredGlassImage"> -->
-
-						<!-- Modal Caption (Image Text) -->
-						<!-- <div id="shatteredGlassCaption">Caption Text</div>
-					</div> -->
-
-					<div class="item-text">
-						<p>This window was taken from CNN's first armored vehicle after it was struck by a sniper's bullet while traveling 
-							down the main thoroughfare in downtown Sarajevo in 1993. The bullet was most likely from an AK-47 and originated 
-							from Grbavica, the Bosnian-Serb controlled section of the city. Snipers often operated in the mostly abandoned 
-							high-rise buildings located on the Grbavica side of the Miljacka River.
-							<br><br>
-							Once a bullet-resistant window is impacted by a round, the effectiveness of the glass is diminished, requiring 
-							the glass be replaced. The same armored car was hit by sniper fire at least nine times during the conflict.
-						</p>
-					</div>
+				<div class="item-text-block">
+					<p class="item-text"> This window was taken from CNN's first armored vehicle after it was struck by a sniper's bullet while traveling 
+						down the main thoroughfare in downtown Sarajevo in 1993. The bullet was most likely from an AK-47 and originated 
+						from Grbavica, the Bosnian-Serb controlled section of the city. Snipers often operated in the mostly abandoned 
+						high-rise buildings located on the Grbavica side of the Miljacka River.
+						<br><br>
+						Once a bullet-resistant window is impacted by a round, the effectiveness of the glass is diminished, requiring 
+						the glass be replaced. The same armored car was hit by sniper fire at least nine times during the conflict.
+					</p>
 				</div>
 			</div>	
 		</div>		
