--- a/public/items/conflict/sniper-sign.html
+++ b/public/items/conflict/sniper-sign.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 	<head>
-   		<title>Sniper Sign</title>
+   		<title>Sniper Warning Signs</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,36 +46,21 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
-		</div>
-
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="shattered-glass.html">Last Item</a> . . . <a href="sarajevo-un-flag.html"> Next Item</a></p>
-		</div>
-
-		<div class="item-pages">
-			<h2>Take Care Sniper Sign</h2>
-
-			<div class="item-block">
-
-				<!-- Trigger the Modal -->
-				<img id="sniperSign" class="item-image" src="sniper-sign.jpeg" width="300" height="200" alt="Caption">
-
-				<!-- The Modal -->
-				<div id="sniperSignModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('sniperSignModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="sniperSignImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="sniperSignCaption">Caption Text</div>
-				</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
+			</div>
 
 			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="shattered-glass.html">Last Item</a> . . . <a href="sarajevo-un-flag.html"> Next Item</a></p>
+			</div>
+
+			<div class="item-pages">
+				<h2>Sniper Warning Signs</h2>
+
+				<img class="item-image" src="sniper-sign.jpeg" alt="Caption">
+
+				<div class="item-text-block">
 					<p class="item-text">
 						This sign was posted outside a building on Cobanija Street in downtown Sarajevo. It was at a very busy 
 						intersection that attracted snipers from the shell-pocked, high-rise buildings in Grbavica, on the other side of the 
@@ -84,9 +71,9 @@
 						stopped to remove the sign. After getting it home it was displayed at the Newseum in Washington, DC. On the twentieth 
 						anniversary of the war, I brought the sign back to Sarajevo for use in CNN's Bosnian War anniversary program.
 					</p>
-				</div>
-			</div>	
-		</div>		
+				</div>	
+			</div>		
+		</div>
 
 		<footer class="clear">
 
