--- a/public/items/conflict/un-lighter.html
+++ b/public/items/conflict/un-lighter.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 	<head>
-   		<title>UN Lighter</title>
+   		<title>UN Sarajevo Lighter</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,37 +46,27 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
-		</div>
-
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="#">Last Item</a> . . . <a href="#"> Next Item</a></p>
-		</div>
-
-		<div class="item-pages">
-			<h2>UN Lighter</h2>
-
-			<!-- Trigger the Modal -->
-			<img id="unLighter" class="item-image" src="un-lighter.jpeg" width="300" height="200" alt="Caption">
-
-			<!-- The Modal -->
-			<div id="unLighterModal" class="modal">
-
-  				<!-- The Close Button -->
-  				<span class="close" onclick="document.getElementById('unLighterModal').style.display='none'">&times;</span>
-
-  				<!-- Modal Content (The Image) -->
-  				<img class="modal-content" id="unLighterImage">
-
-  				<!-- Modal Caption (Image Text) -->
-  				<div id="unLighterCaption">Caption Text</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
 			</div>
 
 			<div>
-				<p>Add text.</p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="mine-marker-sarajevo.html">Last Item</a></p>
 			</div>
-		</div>		
+
+			<div class="item-pages">
+				<h2>UN Sarajevo Lighter</h2>
+
+				<img class="item-image" src="un-lighter.jpeg" alt="Caption">
+
+				<div class="item-text-block">
+					<p class="item-text">
+						Add text.
+					</p>
+				</div>
+			</div>		
+		</div>
 
 		<footer class="clear">
 
