--- a/public/memorabilia-conflict-afghanistan.html
+++ b/public/memorabilia-conflict-afghanistan.html
@@ -104,7 +104,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/mine-field-marker-afghanistan.jpeg"></a>
+						<a href="items/conflict/mine-field-marker-afghanistan.html"><img src="items/conflict/mine-field-marker-afghanistan.jpeg"></a>
 					</div>
 
 					<div class="item-label">Afghan Mine Field Marker</div>
@@ -112,7 +112,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/taliban-leather-strap.jpeg"></a>
+						<a href="items/conflict/taliban-leather-strap.html"><img src="items/conflict/taliban-leather-strap.jpeg"></a>
 					</div>
 
 					<div class="item-label">Taliban Leather Strap</div>
@@ -120,7 +120,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-							<a href="items/conflict/bin-laden-poster.html"><img src="items/conflict/bin-laden-wanted-sign.jpeg"></a>
+							<a href="items/conflict/bin-laden-wanted-sign.html"><img src="items/conflict/bin-laden-wanted-sign.jpeg"></a>
 					</div>
 
 					<div class="item-label">Osama bin Laden Wanted Sign</div>
@@ -128,10 +128,10 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/taliban-tapes-bag.jpeg"></a>
+						<a href="items/conflict/taliban-tapes-bag.html"><img src="items/conflict/taliban-tapes-bag.jpeg"></a>
 					</div>
 
-					<div class="item-label"><a href="items/conflict/taliban-tapes-bag.html">Taliban Tapes Bag</a></div>
+					<div class="item-label">Taliban Tapes Bag</div>
 				</div>
 			</div>
 		</div>
