--- a/public/memorabilia-conflict-arab-israeli.html
+++ b/public/memorabilia-conflict-arab-israeli.html
@@ -88,7 +88,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/israel-notecards.jpeg"></a>
+						<a href="items/conflict/israel-notecards.html"><img src="items/conflict/israel-notecards.jpeg"></a>
 					</div>
 
 					<div class="item-label">Israel Script Notecards</div>
