--- a/public/memorabilia-conflict-balkans.html
+++ b/public/memorabilia-conflict-balkans.html
@@ -169,7 +169,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/bosnia-coat.jpeg"></a>
+						<a href="items/conflict/bosnia-coat.html"><img src="items/conflict/bosnia-coat.jpeg"></a>
 					</div>
 
 					<div class="item-label">Winter Coat Used in Bosnia</div>
@@ -177,14 +177,14 @@
 
 				<div class="gallery-layout">
 						<div class="gallery-item">
-							<a href="#"><img src="items/conflict/amanpour-cnn-tshirt.jpeg"></a>
+							<a href="items/conflict/amanpour-cnn-tshirt.html"><img src="items/conflict/amanpour-cnn-tshirt.jpeg"></a>
 						</div>
 					<div class="item-label">Amanpour Sarajevo Signed CNN Shirt</div>
 				</div>
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/bosnia-ids.jpeg"></a>
+						<a href="items/conflict/bosnia-ids.html"><img src="items/conflict/bosnia-ids.jpeg"></a>
 					</div>
 				
 					<div class="item-label">Bosnian Press Identification Cards</div>
@@ -240,7 +240,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/armored-car-key.jpeg"></a>
+						<a href="items/conflict/armored-car-key.html"><img src="items/conflict/armored-car-key.jpeg"></a>
 					</div>
 
 					<div class="item-label">Armored Car Key</div>
@@ -272,7 +272,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/license-plate-sarajevo.jpeg"></a>
+						<a href="items/conflict/license-plate-sarajevo.html"><img src="items/conflict/license-plate-sarajevo.jpeg"></a>
 					</div>
 
 					<div class="item-label">Mangled License Plate</div>
@@ -280,7 +280,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/maybe-airlines-stamps.jpeg"></a>
+						<a href="items/conflict/maybe-airlines-stamps.html"><img src="items/conflict/maybe-airlines-stamps.jpeg"></a>
 					</div>
 
 					<div class="item-label">Maybe Airlines Passport Stamps</div>
@@ -288,7 +288,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/mine-marker-sarajevo.jpeg"></a>
+						<a href="items/conflict/mine-marker-sarajevo.html"><img src="items/conflict/mine-marker-sarajevo.jpeg"></a>
 					</div>
 
 					<div class="item-label">Sarajevo Land Mine Marker</div>
