--- a/public/items/conflict/ak-47-sign.html
+++ b/public/items/conflict/ak-47-sign.html
@@ -3,6 +3,8 @@
    		<title>AK-47 Sign</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,36 +46,21 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-afghanistan.html">Afghanistan</a></p>
-		</div>
-
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="bomb-frag-afghanistan.html">Next Item</a></p>
-		</div>
-
-		<div class="item-pages">
-			<h2>No Guns Allowed Sign</h2>
-
-			<div class="item-block">
-
-				<!-- Trigger the Modal -->
-				<img id="ak47Sign" class="item-image" src="ak-47-sign.jpeg" width="300" height="200" alt="Caption">
-
-				<!-- The Modal -->
-				<div id="ak47SignModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('ak47SignModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="ak47SignImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="ak47SignCaption">Caption Text</div>
-				</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-afghanistan.html">Afghanistan</a></p>
+			</div>
 
 			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="bomb-frag-afghanistan.html">Next Item</a></p>
+			</div>
+
+			<div class="item-pages">
+				<h2>No Guns Allowed Sign</h2>
+
+				<img class="item-image" src="ak-47-sign.jpeg" alt="Caption">
+
+				<div class="item-text-block">
 					<p class="item-text">This sign was posted at the entrance to the Springhar Hotel in Jalalabad, Afghanistan. 
 						It was the hotel where journalists stayed while covering the war in the area. I checked into the hotel 
 						in November 2001. I was told the sign had been up since the Soviet invasion of Afghanistan.
@@ -84,10 +71,11 @@
 						<br><br>
 						They also made a sign dedicated to the four journalists that were killed after spending the night. I had 
 						arrived with the other journalists the previous night, but in the morning the other journalists left, 
-						trying to make it to Kabul. They were attacked on the road to Kabul and all were killed.</p>
-				</div>
-			</div>	
-		</div>		
+						trying to make it to Kabul. They were attacked on the road to Kabul and all were killed.
+					</p>
+				</div>	
+			</div>		
+		</div>
 
 		<footer class="clear">
 
