--- a/public/items/conflict/bin-laden-wanted-sign.html
+++ b/public/items/conflict/bin-laden-wanted-sign.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-   		<title>Bosnia Winter Coat</title>
+   		<title>Osama bin Laden Poster</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -19,13 +19,13 @@
 		<header>
 			<div class="clear">
 				<div class="title">
-					<h1 class="logo">The Wars in the Balkans</h1>
+					<h1 class="logo">Afghanistan</h1>
 				
-					<p>The Dissolution of Yugoslavia</p>
+					<p>Terrorism, War and Nation-Building</p>
 				</div>
 
 				<div class="headergraphic">
-					<img id="header-photo" src="../../images/Galleries/yugoslavia-map.jpeg">
+					<img id="header-photo" src="../../images/Galleries/afghanistan-map.jpeg">
 				</div>
 			</div>
 		</header>
@@ -48,25 +48,26 @@
 
 		<div class="container">
 			<div>
-				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-afghanistan.html">Afghanistan</a></p>
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="bosnia-road-sign.html">Last Item</a> . . . <a href="amanpour-cnn-tshirt.html"> Next Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="taliban-leather-strap.html">Last Item</a> . . . <a href="taliban-tapes-bag.html"> Next Item</a></p>
 			</div>
 
 			<div class="item-pages">
-				<h2>Bosnia Winter Coat</h2>
-
-				<img class="item-image" src="bosnia-coat.jpeg" alt="Caption">
+				<h2>Osama bin Laden Wanted Poster</h2>
+						
+				<img class="item-image" src="bin-laden-wanted-sign.jpeg" alt="Caption">
 
 				<div class="item-text-block">
-					<p class="item-text"> 
-                        Add text.
+					<p class="item-text">This poster was created by the FBI after Osama bin Laden plotted the 2001 terrorist attack on the World Trade Center and the Pentagon.
+						<br><br>
+						After the attack, bin Laden made the FBI’s Ten Most Wanted List. The terrorist leader was killed May 2, 2011 by U.S. Special Forces.<br><br>
 					</p>
-				</div>
-			</div>	
-		</div>		
+				</div>	
+			</div>		
+		</div>
 
 		<footer class="clear">
 
@@ -97,4 +98,3 @@
 		
 		<script src="../../js/script.js"></script>
 	</body>
-</html>
