--- a/public/items/conflict/bomb-frag-afghanistan.html
+++ b/public/items/conflict/bomb-frag-afghanistan.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 	<head>
-   		<title>AK-47 Sign</title>
+   		<title>Cluster Bomb Sub-Munition Canister</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,46 +46,42 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-afghanistan.html">Afghanistan</a></p>
-		</div>
-
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="ak-47-sign.html">Last Item</a> . . . <a href="#"> Next Item</a></p>
-		</div>
-
-		<div class="item-pages">
-			<h2>Cluster Bomb Sub-Munition Canister</h2>
-
-			<div class="item-block">
-
-				<!-- Trigger the Modal -->
-				<img id="bombFragAfghanistan" class="item-image" src="bomb-frag-afghanistan.jpeg" width="300" height="200" alt="Caption">
-
-				<!-- The Modal -->
-				<div id="bombFragAfghanistanModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('bombFragAfghanistanModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="bombFragAfghanistanImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="bombFragAfghanistanCaption">Caption Text</div>
-				</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-afghanistan.html">Afghanistan</a></p>
+			</div>
 
 			<div>
-					<p class="item-text">On October 7, 2001, the United States launched Operation Enduring Freedom. It was a response to the terrorist attacks in New York, Washington, DC and in the air over Pennsylvania on September 11.<br><br>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="ak-47-sign.html">Last Item</a> . . . <a href="mine-field-marker-afghanistan.html"> Next Item</a></p>
+			</div>
 
-					With the commencement of the air war in Afghanistan, the U.S. brought out a diverse arsenal of weapons. One of the more controversial weapons was the use of cluster bombs. From October 2001 to March 2002, the United States dropped over 1,200 cluster bombs. Each bomb contained sub-munitions called bomblets, nearly 250,000 in all.<br><br>
+			<div class="item-pages">
+				<h2>Cluster Bomb Sub-Munition Canister</h2>
+					
+				<div class="item-block-overflow">
+					<img class="item-image-overflow" src="bomb-frag-afghanistan.jpeg" alt="Caption">
 
-					The bombs were controversial because they lacked accuracy and left a large number of unexploded bomblets. The problem was compounded by the fact the bomblet canisters were very close in color to the Humanitarian Daily Rations (HDR's) that were being dropped as food aid to the civilian population. Both items were similar in color and size. Children seeking food packets could easily mistake a deadly bomblet by mistake. The United States realized the mistake and changed the color of the HDR packaging, first to blue and then to clear.<br><br>
-
-					Despite international humanitarian groups' push to get bans on cluster bombs, the U.S. still keeps cluster bombs in its inventory and is attempting to increase the accuracy and reduce the number of unexploded bomblets in future supplies.</p>
-				</div>
-			</div>	
-		</div>		
+					<div class="item-text-block-overflow">
+						<p class="item-text-overflow">
+							On October 7, 2001, the United States launched Operation Enduring Freedom. It was a response to the terrorist attacks in New York, 
+							Washington, DC and in the air over Pennsylvania on September 11.
+							<br><br>
+							With the commencement of the air war in Afghanistan, the U.S. brought out a diverse arsenal of weapons. One of the more controversial 
+							weapons was the use of cluster bombs. From October 2001 to March 2002, the United States dropped over 1,200 cluster bombs. Each bomb 
+							contained sub-munitions called bomblets, nearly 250,000 in all.
+							<br><br>
+							The bombs were controversial because they lacked accuracy and left a large number of unexploded bomblets. The problem was compounded 
+							by the fact the bomblet canisters were very close in color to the Humanitarian Daily Rations (HDR's) that were being dropped as food 
+							aid to the civilian population. Both items were similar in color and size. Children seeking food packets could easily mistake a deadly 
+							bomblet by mistake. The United States realized the mistake and changed the color of the HDR packaging, first to blue and then to clear.
+							<br><br>
+							Despite international humanitarian groups' push to get bans on cluster bombs, the U.S. still keeps cluster bombs in its inventory and is 
+							attempting to increase the accuracy and reduce the number of unexploded bomblets in future supplies.
+						</p>
+					</div>	
+				</div>	
+			</div>		
+		</div>
 
 		<footer class="clear">
 
