--- a/public/items/conflict/bush-mosaic-tiles.html
+++ b/public/items/conflict/bush-mosaic-tiles.html
@@ -3,6 +3,8 @@
    		<title>George HW Bush Mosaic Tiles</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,39 +46,23 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-gulf-wars.html">Gulf Wars</a></p>
-		</div>
-
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="#">Last Item</a> . . . <a href="#"> Next Item</a></p>
-		</div>
-
-		<div class="item-pages">
-			<h2>George H.W. Bush Mosaic Tiles</h2>
-
-			<div class="item-block">
-
-				<!-- Trigger the Modal -->
-				<img id="bushMosaicTiles" class="item-image" src="bush-tile.jpeg" width="300" height="200" alt="Caption">
-
-				<!-- The Modal -->
-				<div id="bushMosaicTilesModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('bushMosaicTilesModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="bushMosaicTilesImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="bushMosaicTilesCaption">Caption Text</div>
-				</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-gulf-wars.html">Gulf Wars</a></p>
+			</div>
 
 			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="baby-milk-iraq.html">Last Item</a> . . . <a href="arnett-book.html"> Next Item</a></p>
+			</div>
+
+			<div class="item-pages">
+				<h2>George H.W. Bush Mosaic Tiles</h2>
+					
+				<img class="item-image" src="bush-mosaic-tiles.jpeg" alt="Caption">
+
+				<div class="item-text-block">
 					<p class="item-text">
 						After his defeat in the First Gulf War, Saddam Hussein made it clear that he didn’t like U.S. President George H.W. Bush.
-						<br><br>
 						Following the war, with Saddam’s approval, a large mosaic was placed on the floor, near the entryway to the Al-Rashid Hotel. 
 						The artwork featured an unflattering portrait of George H.W. Bush and text calling the U.S. President a criminal. 
 						It was placed on the floor so that anyone who entered the hotel would walk over Bush’s face. The gesture is considered a severe insult in the Arab world. 
@@ -86,9 +72,10 @@
 						the soldiers destroyed the mosaic and replaced it with a picture of Saddam. They kept some of the tiles as souvenirs. I obtained the tiles 
 						from several members of the 3rd ID.
 					</p>
-				</div>
-			</div>	
-		</div>		
+				</div>	
+			</div>		
+
+		</div>
 
 		<footer class="clear">
 
