--- a/public/items/conflict/cruise-missile-baghdad-two.html
+++ b/public/items/conflict/cruise-missile-baghdad-two.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 	<head>
-   		<title>Osama bin Laden Poster</title>
+   		<title>Signed Cruise Missile Skin</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -17,13 +19,13 @@
 		<header>
 			<div class="clear">
 				<div class="title">
-					<h1 class="logo">Afghanistan</h1>
+					<h1 class="logo">The Wars in the Gulf</h1>
 				
-					<p>Terrorism, War and Nation-Building</p>
+					<p>Turmoil In Iraq</p>
 				</div>
 
 				<div class="headergraphic">
-					<img id="header-photo" src="../../images/Galleries/afghanistan-map.jpeg">
+					<img id="header-photo" src="../../images/Galleries/iraq-map.jpeg">
 				</div>
 			</div>
 		</header>
@@ -44,43 +46,27 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-afghanistan.html">Afghanistan</a></p>
-		</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-gulf-wars.html">Gulf Wars</a></p>
+			</div>
 
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="#">Last Item</a> . . . <a href="#"> Next Item</a></p>
-		</div>
+			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="cruise-missile-baghdad.html">Last Item</a> . . . <a href="cruise-missile-skin.html"> Next Item</a></p>
+			</div>
 
-		<div class="item-pages">
-			<h2>Osama bin Laden Wanted Poster</h2>
+			<div class="item-pages">
+				<h2>Signed Cruise Missile Skin</h2>
+					
+				<img class="item-image" src="cruise-missile-baghdad-two-2.jpeg" alt="Caption">
 
-			<div class="item-block">
-
-				<!-- Trigger the Modal -->
-				<img id="binLadenPoster" class="item-image" src="bin-laden-wanted-sign.jpeg" width="300" height="200" alt="Caption">
-
-				<!-- The Modal -->
-				<div id="binLadenPosterModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('binLadenPosterModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="binLadenPosterImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="binLadenPosterCaption">Caption Text</div>
-				</div>
-
-				<div>
-					<p class="item-text">This poster was created by the FBI after Osama bin Laden plotted the 2001 terrorist attack on the World Trade Center and the Pentagon.
-					<br><br>
-					After the attack, bin Laden made the FBI’s Ten Most Wanted List. The terrorist leader was killed May 2, 2011 by U.S. Special Forces.<br><br>
+				<div class="item-text-block">
+					<p class="item-text">
+						Add text.
 					</p>
-				</div>
-			</div>	
-		</div>		
+				</div>	
+			</div>		
+		</div>
 
 		<footer class="clear">
 
