--- a/public/items/conflict/gulf-war-reporters.html
+++ b/public/items/conflict/gulf-war-reporters.html
@@ -3,6 +3,8 @@
    		<title>Boys From Baghdad</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,36 +46,21 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-gulf-wars.html">Gulf Wars</a></p>
-		</div>
-
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="#">Last Item</a> . . . <a href="#"> Next Item</a></p>
-		</div>
-
-		<div class="item-pages">
-			<h2>Boys from Baghdad</h2>
-
-			<div class="item-block">
-
-				<!-- Trigger the Modal -->
-				<img id="boysFromBaghdad" class="item-image" src="gulf-war-reporters.jpeg" width="300" height="200" alt="Caption">
-
-				<!-- The Modal -->
-				<div id="boysFromBaghdadModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('boysFromBaghdadModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="boysFromBaghdadImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="boysFromBaghdadCaption">Caption Text</div>
-				</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-gulf-wars.html">Gulf Wars</a></p>
+			</div>
 
 			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="scud-part.html">Last Item</a> . . . <a href="iraqi-shelter.html"> Next Item</a></p>
+			</div>
+
+			<div class="item-pages">
+				<h2>Boys from Baghdad</h2>
+					
+				<img class="item-image" src="gulf-war-reporters.jpeg" alt="Caption">
+
+				<div class="item-text-block">
 					<p class="item-text">
 						This is a screen shot display of the CNN transmission from Baghdad on the opening night of the First Gulf War.
 						<br><br>
@@ -81,9 +68,9 @@
 						video back to Atlanta. They did, however, have a four-wire box that transmitted audio to Amman, Jordan and then back to Atlanta. 
 						This screen-shot was used in place of video and displayed along with the audio from the four-wire box.
 					</p>
-				</div>
-			</div>	
-		</div>		
+				</div>	
+			</div>		
+		</div>
 
 		<footer class="clear">
 
