--- a/public/items/conflict/taliban-tapes-bag.html
+++ b/public/items/conflict/taliban-tapes-bag.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 	<head>
-   		<title>Terrorist Tape Sack</title>
+   		<title>Al-Qaeda Training Tape Sack</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,44 +46,29 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-afghanistan.html">Afghanistan</a></p>
-		</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-afghanistan.html">Afghanistan</a></p>
+			</div>
 
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="#">Last Item</a> . . . <a href="#"> Next Item</a></p>
-		</div>
+			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="bin-laden-wanted-sign.html">Last Item</a></p>
+			</div>
 
-		<div class="item-pages">
-			<h2>Terrorist Tape Sack</h2>
+			<div class="item-pages">
+				<h2>Al-Qaeda Training Tape Sack</h2>
+					
+				<img class="item-image" src="taliban-tapes-bag.jpeg" alt="Caption">
 
-			<div class="item-block">
-
-				<!-- Trigger the Modal -->
-				<img id="terroristTapeSack" class="item-image" src=".taliban-tapes-bag.jpeg" width="300" height="200" alt="Caption">
-
-				<!-- The Modal -->
-				<div id="terroristTapeSackModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('terroristTapeSackModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="terroristTapeSackImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="terroristTapeSackCaption">Caption Text</div>
-				</div>
-
-				<div>
+				<div class="item-text-block">
 					<p class="item-text"> 
 						This is the container used to transport al-Qaeda training tapes from remote areas of Afghanistan. 
 						Tapes were stored in an al-Qaeda safe house and acquired by CNN. They showed scenes of Osama bin Laden interacting 
 						with his aides and the training of his soldiers. Some of the tapes showchemical weapons testing on dogs.
 					</p>
-				</div>
-			</div>	
-		</div>		
+				</div>	
+			</div>		
+		</div>
 
 		<footer class="clear">
 
