--- a/public/items/conflict/un-flag-russian-apc.html
+++ b/public/items/conflict/un-flag-russian-apc.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 	<head>
-   		<title>Russian UN Flag</title>
+   		<title>Russian Armored Personnel Vehicle Flag</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="../../css/reset.css">
 		<link rel="stylesheet" href="../../css/mobile.css">
 		<link rel="stylesheet" href="../../css/tablet.css">
@@ -44,37 +46,22 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
-		</div>
+		<div class="container">
+			<div>
+				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-balkans.html">Balkans Wars</a></p>
+			</div>
 
-		<div>
-			<p class="next-item"><span class="red">Scroll&colon;</span> <a href="sarajevo-un-flag.html">Last Item</a> . . . <a href="sarajevo-artillery-shell.html"> Next Item</a></p>
-		</div>
+			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="sarajevo-un-flag.html">Last Item</a> . . . <a href="sarajevo-artillery-shell.html"> Next Item</a></p>
+			</div>
 
-		<div class="item-pages">
-			<h2>Russian United Nations Flag</h2>
+			<div class="item-pages">
+				<h2>Russian Armored Personnel Vehicle Flag</h2>
 
-			<div class="item-block">
+				<img class="item-image" src="un-flag-russian-apc.jpeg" alt="Caption">
 
-				<!-- Trigger the Modal -->
-				<img id="unFlagRussianApc" class="item-image" src="un-flag-russian-apc.jpeg" width="300" height="200" alt="Caption">
-
-				<!-- The Modal -->
-				<div id="unFlagRussianApcModal" class="modal">
-
-  					<!-- The Close Button -->
-  					<span class="close" onclick="document.getElementById('unFlagRussianApcModal').style.display='none'">&times;</span>
-
-  					<!-- Modal Content (The Image) -->
-  					<img class="modal-content" id="unFlagRussianApcImage">
-
-  					<!-- Modal Caption (Image Text) -->
-  					<div id="unFlagRussianApcCaption">Caption Text</div>
-				</div>
-
-				<div class="item-text">
-					<p>
+				<div class="item-text-block">
+					<p class="item-text">
 						When NATO decided to use airstrikes against Bosnian Serb positions in Bosnia (1994-1995) to stop shelling in 
 						areas like Sarajevo, Russia objected and pressed for more involvement with the conflict in the former Yugoslavia. 
 						Russia had been long-time allies with the Serbs and felt airstrikes should only be used after all other negotiations 
@@ -87,8 +74,8 @@
 						the war. The flag was obtained in a trade with Russian troops at their compound outside the Tito Barracks in dowtown Sarajevo.
 					</p>
 				</div>
-			</div>
-		</div>		
+			</div>		
+		</div>
 
 		<footer class="clear">
 
