--- a/public/memorabilia-conflict-chechnya.html
+++ b/public/memorabilia-conflict-chechnya.html
@@ -64,7 +64,7 @@
 			<div>
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/land-mine-cover-chechnya.jpeg"></a>
+						<a href="items/conflict/land-mine-cover-chechnya.html"><img src="items/conflict/land-mine-cover-chechnya.jpeg"></a>
 					</div>
 
 					<div class="item-label">Chechnya Land Mine Cover</div>
@@ -72,7 +72,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/russian-hq-flag-grozny.jpeg"></a>
+						<a href="items/conflict/russian-hq-flag-grozny.html"><img src="items/conflict/russian-hq-flag-grozny.jpeg"></a>
 					</div>
 
 					<div class="item-label">Russian Headquarters Flag from Grozny</div>
