--- a/public/memorabilia-conflict-other.html
+++ b/public/memorabilia-conflict-other.html
@@ -66,7 +66,7 @@
 			<div>
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/conflict/gitmo-lock.jpeg"></a>
+						<a href="items/conflict/gitmo-lock.html"><img src="items/conflict/gitmo-lock.jpeg"></a>
 					</div>
 					
 					<div class="item-label">Guantanamo Bay Prison Lock and Chain</div>
