added item pages

--- a/public/items/conflict/gitmo-lock.html
+++ b/public/items/conflict/gitmo-lock.html
@@ -51,9 +51,9 @@
 				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="../../memorabilia.html"> Memorabilia</a> &gt; <a href="../../memorabilia-conflict.html">Conflict</a> &gt; <a href="../../memorabilia-conflict-other.html">Other</a></p>
 			</div>
 
-			<!-- <div>
-                <p class="next-item"><span class="red">Scroll&colon;</span> <a href="#">Next Item</a></p>
-            </div> -->
+			<div>
+				<p class="next-item"><span class="red">Scroll&colon;</span><a href="haiti-radio.html"> Next Item</a></p>
+			</div>
 
 			<div class="item-pages">
 				<h2>Guantanamo Bay Prison Front Gate Lock and Chain</h2>
