--- a/public/memorabilia-breaking-news.html
+++ b/public/memorabilia-breaking-news.html
@@ -89,7 +89,7 @@
 			<div>
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/breaking-news/baltimore-blm-protest.jpeg"></a>
+						<a href="items/breaking-news/baltimore-blm-protest.html"><img src="items/breaking-news/baltimore-blm-protest.jpeg"></a>
 					</div>
 
 					<div class="item-label">Black Lives Matter Protest Gas Cannister</div>
@@ -97,7 +97,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/breaking-news/gang-bat.jpeg"></a>
+						<a href="items/breaking-news/gang-bat.html"><img src="items/breaking-news/gang-bat.jpeg"></a>
 					</div>
 
 					<div class="item-label">L.A. Riots Gang Baseball Bat</div>
@@ -105,7 +105,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/breaking-news/911-special-script-carol-lin.jpeg"></a>
+						<a href="items/breaking-news/911-special-script-carol-lin.html"><img src="items/breaking-news/911-special-script-carol-lin.jpeg"></a>
 					</div>
 
 					<div class="item-label">9/11 Attacks Special Script</div>
@@ -113,7 +113,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/breaking-news/columbia-explosion-script-carol-lin.jpeg"></a>
+						<a href="items/breaking-news/columbia-explosion-script-carol-lin.html"><img src="items/breaking-news/columbia-explosion-script-carol-lin.jpeg"></a>
 					</div>
 
 					<div class="item-label">Columbia Explosion Script</div>
@@ -121,7 +121,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/breaking-news/virginia-tech-media-permit.jpeg"></a>
+						<a href="items/breaking-news/virginia-tech-media-permit.html"><img src="items/breaking-news/virginia-tech-media-permit.jpeg"></a>
 					</div>
 
 					<div class="item-label">Virginia Tech Massacre Media Permit</div>
@@ -129,7 +129,15 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/breaking-news/no-parking-notice.jpeg"></a>
+						<a href="items/breaking-news/mcveigh-car-fragment.html"><img src="items/breaking-news/mcveigh-car-fragment.jpeg"></a>
+					</div>
+
+					<div class="item-label">Timothy McVeigh Practice Explosion Fragment</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/breaking-news/no-parking-notice.html"><img src="items/breaking-news/no-parking-notice.jpeg"></a>
 					</div>
 
 					<div class="item-label">Michael Jackson Trial No Parking Sign</div>
@@ -137,15 +145,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/breaking-news/non-lethal-projectile.jpeg"></a>
-					</div>
-
-					<div class="item-label">Non-Lethal Projectile</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="#"><img src="items/breaking-news/tiananmen-square-note.jpeg"></a>
+						<a href="items/breaking-news/tiananmen-square-note.html"><img src="items/breaking-news/tiananmen-square-note.jpeg"></a>
 					</div>
 	
 					<div class="item-label">Chinese Government Tiananmen Square Note</div>
@@ -153,7 +153,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/breaking-news/sandy-hook-anchor-notes.jpeg"></a>
+						<a href="items/breaking-news/sandy-hook-anchor-notes.html"><img src="items/breaking-news/sandy-hook-anchor-notes.jpeg"></a>
 					</div>
 		
 					<div class="item-label">Sandy Hook Shooting Anchor Notes</div>
@@ -161,10 +161,34 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/breaking-news/pulse-shooting-memorial-pass.jpeg"></a>
+						<a href="items/breaking-news/pulse-shooting-memorial-pass.html"><img src="items/breaking-news/pulse-shooting-memorial-pass.jpeg"></a>
 					</div>
 
 					<div class="item-label">Pulse Nightclub Shooting Memorial Pass</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/breaking-news/sandy-hook-ornaments.html"><img src="items/breaking-news/sandy-hook-ornaments.jpeg"></a>
+					</div>
+
+					<div class="item-label">Sandy Hook Memorial Ornaments</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/breaking-news/riot-gear.html"><img src="items/breaking-news/riot-gear.jpeg"></a>
+					</div>
+
+					<div class="item-label">Riot Gear</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/breaking-news/casey-anthony-media-pass.html"><img src="items/breaking-news/casey-anthony-media-pass.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Casey Anthony Trial Media Pass</div>
 				</div>
 			</div>
 		</div>	
