--- a/public/memorabilia-conflict-other.html
+++ b/public/memorabilia-conflict-other.html
@@ -71,6 +71,14 @@
 					
 					<div class="item-label">Guantanamo Bay Prison Lock and Chain</div>
 				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/conflict/haiti-radio.html"><img src="items/conflict/haiti-radio.jpeg"></a>
+					</div>
+					
+					<div class="item-label">U.S. Military Radios Dropped in Haiti</div>
+				</div>
 			</div>
 		</div>	
 		
