--- a/public/memorabilia-features.html
+++ b/public/memorabilia-features.html
@@ -21,7 +21,7 @@
 				<div class="title">
 					<h1 class="logo">Features</h1>
 				
-					<p>Lorem ipsum dolor</p>
+					<p>Add text.</p>
 				</div>
 
 				<div class="headergraphic">
@@ -88,7 +88,7 @@
 			<div>
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/features/castro-pope-figurines.jpeg"></a>
+						<a href="items/features/castro-pope-figurines.html"><img src="items/features/castro-pope-figurines.jpeg"></a>
 					</div>
 
 					<div class="item-label">Pope & Fidel Castro Figurines</div>
@@ -96,7 +96,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/features/fidel-castro-signed-baseball.jpeg"></a>
+						<a href="items/features/fidel-castro-signed-baseball.html"><img src="items/features/fidel-castro-signed-baseball.jpeg"></a>
 					</div>
 
 					<div class="item-label">Fidel Castro Signed Baseball</div>
@@ -104,7 +104,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/features/hawkbill-safety-light.jpeg"></a>
+						<a href="items/features/hawkbill-safety-light.html"><img src="items/features/hawkbill-safety-light.jpeg"></a>
 					</div>
 
 					<div class="item-label">U.S.S. Hawkbill Safety Light</div>
@@ -112,7 +112,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/features/50th-anniversary-communism-china.jpeg"></a>
+						<a href="items/features/50th-anniversary-communism-china.html"><img src="items/features/50th-anniversary-communism-china.jpeg"></a>
 					</div>
 
 					<div class="item-label">Chinese 50th Anniversary Script</div>
@@ -120,7 +120,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/features/cuban-missile-silo.jpeg"></a>
+						<a href="items/features/cuban-missile-silo.html"><img src="items/features/cuban-missile-silo.jpeg"></a>
 					</div>
 	
 					<div class="item-label">Cuban Missile Silo Piece</div>
@@ -128,7 +128,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/features/communist-statue-2.jpeg"></a>
+						<a href="items/features/communist-statue.html"><img src="items/features/communist-statue-2.jpeg"></a>
 					</div>
 		
 					<div class="item-label">Chinese Communist Statue</div>
@@ -136,7 +136,7 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/features/communist-alarm-clock.jpeg"></a>
+						<a href="items/features/communist-alarm-clock.html"><img src="items/features/communist-alarm-clock.jpeg"></a>
 					</div>
 		
 					<div class="item-label">Chinese Communist Alarm Clock</div>
@@ -144,11 +144,28 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="#"><img src="items/features/big-nut.jpeg"></a>
+						<a href="items/features/big-nut.html"><img src="items/features/big-nut.jpeg"></a>
 					</div>
 		
 					<div class="item-label">CNN HLN "Big Nut"</div>
 				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/features/operation-deep-freeze-parachute.html"><img src="items/features/operation-deep-freeze-parachute.jpeg"></a>
+					</div>
+			
+					<div class="item-label">Operation Deep Freeze Parachute</div>
+				</div>
+
+
+				<div class="gallery-layout">
+						<div class="gallery-item">
+							<a href="items/features/cuba-pope-flags.html"><img src="items/features/cuba-pope-flags.jpeg"></a>
+						</div>
+			
+						<div class="item-label">Cuba-Pope Flags</div>
+					</div>
 			</div>
 		</div>	
 		
