--- a/public/memorabilia.html
+++ b/public/memorabilia.html
@@ -87,7 +87,7 @@
 		<footer class="clear">
 
 			<div class="footerbox">
-				<h4 class="hidden">Collecting the <a href="hidden-memorabilia.html">N</a>ews</h4>
+				<h4 class="hidden">Collecting the <a href="memorabilia-hidden.html">N</a>ews</h4>
 				
 				<p>Contact Information</p>
 				
