--- a/public/items/hidden/palace-door-handles.html
+++ b/public/items/hidden/palace-door-handles.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-   		<title>White House Piece</title>
+   		<title>Iraqi Palace Door Handles</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -52,13 +52,13 @@
 			</div>
 
 			<div>
-                <p class="next-item"><span class="red">Scroll&colon;</span> <a href="clinton-wtf-sign.html">Last Item</a> . . . <a href="baby-jessica-sock.html"> Next Item</a></p>
+                <p class="next-item"><span class="red">Scroll&colon;</span> <a href="lewinsky-cartoon.html">Last Item</a> . . . <a href="palace-wall-carving.html"> Next Item</a></p>
             </div>
 
 			<div class="item-pages">
-				<h2>White House Piece</h2>
+				<h2>Iraqi Palace Door Handles</h2>
 
-				<img class="item-image" src="white-house-piece.jpeg" alt="Caption">
+				<img class="item-image" src="palace-door-handles-2.jpeg" alt="Caption">
 
 				<div class="item-text-block">
 					<p class="item-text">
